# adr-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: rubric.yaml
src/: adr.py  cli.py
src/agent/: orchestrator.py  prompts.py  researcher.py  scorer.py  writer.py
src/kb/: loader.py
src/kb/patterns/: ai_mlops.yaml  data_platform.yaml  governance.yaml  integration.yaml
src/llm/: __init__.py  anthropic_client.py  base.py  factory.py  mock_client.py  openai_compatible_client.py
src/models/: adr.py  state.py
tests/: test_cli.py  test_researcher.py  test_scorer.py  test_smoke.py  test_writer.py
tests/fixtures/: intake_result.json  research_results.json  scoring_response_kafka.json  scoring_response_kinesis.json  web_search_results.json
